2008-03-30  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1929496 ]: cosmetic informational message fix
	* m4/param.m4: set cl_machine_file_h before the cross_compiling test
	so that it is defined in both branches

2008-03-30  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (GETGROUPS, %SETGROUPS): implemented
	* modules/syscalls/posix.lisp (GETGROUPS): export, add DEFSETF
	* modules/syscalls/configure.in: check for getgroups and setgroups 
	* src/lispbibl.d (llength1): export to clisp.h

2008-03-29  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1928920 ]: missing quotes in shell code for test invocation
	* m4/intparam.m4: use ac_cv_type_long_long_int
	instead of the obsolete ac_cv_type_long_long

2008-03-28  Yann Dauphin  <yann-nicolas.dauphin@polymtl.ca>
	Sam Steingold  <sds@gnu.org>

	* spvw_gcmark.d (down_sxrecord) [USE_JITC]: when gc_drop_jitc,
	replace cclosure_jitc with NIL

2008-03-27  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1683394 ]: TANH floating point overflow for large floats
	* realtran.d (posF_tanh_posF): new function: 1-exp(-2x)/1+exp(-2x)
	(R_tanh_R): use it instead of R_cosh_sinh_R_R when |x|>=1

2008-03-25  Sam Steingold  <sds@gnu.org>

	* array.d, control.d, debug.d, eval.d, execname.c, hashtabl.d:
	* io.d, lisparit.d, lispbibl.d, list.d, package.d, pathname.d:
	* predtype.d, record.d, sequence.d, spvw.d, spvw_circ.d:
	* spvw_debug.d, spvw_garcol.d, spvw_language.d, spvw_memfile.d:
	* stream.d, weak.d: add extra braces to work around the g++ 4.2
	error "jump to label ... crosses initialization of ..."

2008-03-25  Sam Steingold  <sds@gnu.org>

	* m4/cc-sunpro.m4: new file, define CL_CC_SUNPRO
	* configure.in: call CL_CC_SUNPRO
	* makemake.in: use CC_SUNPRO, set by CL_CC_SUNPRO, to detect
	SUN SUNWspro C compiler (instead of "$CC -flags")
	Reported by Vladimir Volovich <vvv2@users.sourceforge.net>

2008-03-25  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1924501 ]: cannot find gllib include